--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -33,6 +33,79 @@
             android:layout_width="272dp"
             android:layout_height="match_parent">
 
+            <ImageView
+                android:id="@+id/rose_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                app:srcCompat="@drawable/rose" />
+
+            <Button
+                android:id="@+id/north_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_above="@+id/rose_image"
+                android:layout_centerHorizontal="true"
+                android:text="@string/north" />
+
+            <Button
+                android:id="@+id/south_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_below="@+id/rose_image"
+                android:layout_centerHorizontal="true"
+                android:text="@string/south" />
+
+            <Button
+                android:id="@+id/east_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:text="@string/east" />
+
+            <Button
+                android:id="@+id/west_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:text="@string/west" />
+
+            <Button
+                android:id="@+id/nw_button"
+                android:layout_width="50dp"
+                android:layout_height="40dp"
+                android:layout_alignStart="@+id/rose_image"
+                android:layout_alignTop="@+id/rose_image"
+                android:layout_marginTop="11dp"
+                android:text="@string/north_west" />
+
+            <Button
+                android:id="@+id/ne_button"
+                android:layout_width="50dp"
+                android:layout_height="40dp"
+                android:layout_alignEnd="@+id/rose_image"
+                android:layout_alignTop="@+id/nw_button"
+                android:text="@string/north_east" />
+
+            <Button
+                android:id="@+id/sw_button"
+                android:layout_width="50dp"
+                android:layout_height="40dp"
+                android:layout_alignBottom="@+id/rose_image"
+                android:layout_alignStart="@+id/rose_image"
+                android:layout_marginBottom="13dp"
+                android:text="@string/south_west" />
+
+            <Button
+                android:id="@+id/se_button"
+                android:layout_width="50dp"
+                android:layout_height="40dp"
+                android:layout_alignTop="@+id/sw_button"
+                android:layout_alignEnd="@+id/rose_image"
+                android:text="@string/south_east" />
         </RelativeLayout>
 
         <LinearLayout
