--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,28 +6,43 @@
     android:layout_height="match_parent"
     tools:context="com.odys.kotlintestapp.GameActivity">
 
+    <Button
+        android:id="@+id/quit_button"
+        android:layout_width="109dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:text="@string/quit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.069"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.945" />
+
     <TextView
         android:id="@+id/description"
-        android:layout_width="353dp"
-        android:layout_height="103dp"
+        android:layout_width="225dp"
+        android:layout_height="213dp"
         android:text="@string/test_long_text"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.516"
+        app:layout_constraintHorizontal_bias="0.087"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.122" />
+        app:layout_constraintVertical_bias="0.339" />
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="313dp"
+        android:layout_width="375dp"
+        android:layout_height="300dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.874"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.919">
+        app:layout_constraintVertical_bias="0.487">
 
         <RelativeLayout
             android:layout_width="272dp"
@@ -46,7 +61,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_above="@+id/rose_image"
-                android:layout_centerHorizontal="true"
+                android:layout_alignStart="@+id/south_button"
                 android:text="@string/north" />
 
             <Button
@@ -103,18 +118,23 @@
                 android:id="@+id/se_button"
                 android:layout_width="50dp"
                 android:layout_height="40dp"
-                android:layout_alignTop="@+id/sw_button"
                 android:layout_alignEnd="@+id/rose_image"
+                android:layout_alignTop="@+id/sw_button"
                 android:text="@string/south_east" />
 
-            <Button
-                android:id="@+id/quit_button"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true"
-                android:text="@string/quit" />
         </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="52dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Space
+                android:layout_width="45dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="72dp"
@@ -138,6 +158,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/down" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"></LinearLayout>
+
         </LinearLayout>
     </LinearLayout>
 
